A lab to practice constraints.

--- a/SquaresNStuff/Base.lproj/Main.storyboard
+++ b/SquaresNStuff/Base.lproj/Main.storyboard
@@ -1,10 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -17,12 +27,49 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SpaceShip" translatesAutoresizingMaskIntoConstraints="NO" id="BWZ-EG-bfG">
+                                <rect key="frame" x="0.0" y="20" width="375" height="167"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinstein" translatesAutoresizingMaskIntoConstraints="NO" id="N30-rh-hIO">
+                                <rect key="frame" x="129" y="140.5" width="117" height="117"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="N30-rh-hIO" secondAttribute="height" multiplier="1:1" id="Cxa-5L-pgA"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Albert Einstein" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ca-iv-8V6">
+                                <rect key="frame" x="99.5" y="265.5" width="175.5" height="37"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <size key="shadowOffset" width="2" height="1"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="N30-rh-hIO" firstAttribute="height" secondItem="BWZ-EG-bfG" secondAttribute="height" multiplier="0.7" id="ENo-XM-sWM"/>
+                            <constraint firstItem="BWZ-EG-bfG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JUY-GM-i4k"/>
+                            <constraint firstItem="7Ca-iv-8V6" firstAttribute="top" secondItem="N30-rh-hIO" secondAttribute="bottom" constant="8" id="Rvr-zF-iEi"/>
+                            <constraint firstItem="BWZ-EG-bfG" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="WUE-nC-BZ3"/>
+                            <constraint firstItem="N30-rh-hIO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aLP-Qf-DPf"/>
+                            <constraint firstItem="BWZ-EG-bfG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aoq-HD-a4e"/>
+                            <constraint firstItem="BWZ-EG-bfG" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="gk5-rg-tPU"/>
+                            <constraint firstItem="7Ca-iv-8V6" firstAttribute="centerX" secondItem="N30-rh-hIO" secondAttribute="centerX" id="vY6-rS-ieo"/>
+                            <constraint firstItem="N30-rh-hIO" firstAttribute="top" secondItem="BWZ-EG-bfG" secondAttribute="bottom" multiplier="0.75" id="xzS-xB-rhk"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="profileImageView" destination="N30-rh-hIO" id="Oua-x8-dvK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="399.19999999999999" y="388.15592203898052"/>
+            <point key="canvasLocation" x="684" y="353"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AlbertEinstein" width="300" height="320"/>
+        <image name="SpaceShip" width="900" height="563"/>
+    </resources>
 </document>
